.newInstance() .getDeclaredConstructor().newInstance()
Signed-off-by: Manuel Daniel Dahmen <manuel.dahmen@gmx.com>